# gcs-reader

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  lib.rs  reader.rs  uri.rs
tests/: dummy.file  test_reader.rs
