[package]
name = "gcs-reader"
version = "0.1.0"
edition = "2021"
exclude = [
    "tests/*",
    "rustfmt.toml"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
thiserror = "1.0.48"
reqwest = { version = "0.11.20", features = ["json", "serde_json", "blocking"] }
serde = { version = "1.0.183", features = ["derive"]}
serde_json = "1.0.107"
gcp_auth = "0.9.0"
tokio = "1.32.0"
bytes = "1.5.0"

[dev-dependencies]
dotenv = "0.15.0"
